# MiraiCP-debug-docs

./: .gitignore  CMakeLists.txt  README.md
scripts/: init.py
